<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".categorieslist.CategoriesList">

    <TextView
        android:id="@+id/noItems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/ui_no_items"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/categoriesView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <FrameLayout
        android:id="@+id/search_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:layout_constraintBottom_toTopOf="@+id/categoriesView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">
        <EditText
            android:id="@+id/categoriesSearchBy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/ui_default_category"
            android:ems="10"
            android:hint="@string/ui_category_search_hint"
            android:inputType="textPersonName"
            android:paddingEnd="24dp"
            tools:text="ГнильГнильГнильГнильГнильГнильГнильГниль"
            tools:ignore="RtlSymmetry,TextContrastCheck" />

        <ImageButton
            android:id="@+id/clear_search"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="end|center_vertical"
            android:adjustViewBounds="true"
            android:background="@drawable/ic_baseline_clear_24"
            android:contentDescription="@string/description_clear_search"
            android:scaleType="center"
            tools:ignore="TouchTargetSizeCheck"
            android:visibility="gone"
            android:onClick="handleClearClick"
            tools:visibility="visible" />
    </FrameLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/categoriesView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_wrapper"
        tools:visibility="visible">

    </androidx.recyclerview.widget.RecyclerView>

</androidx.constraintlayout.widget.ConstraintLayout>